--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-streamlit==1.32.0
-pandas==2.2.1
-numpy==1.26.4
-altair==5.2.0
-openpyxl==3.1.2
-fpdf2==2.7.8
-plotly==5.18.0
+streamlit
+pandas
+numpy
+plotly
+openpyxl
